tests/fixtures/errors/const_pointer.cpp
int* const p = nullptr; p = (int*)1;